--- a/services/templateemails/resetpassword.html
+++ b/services/templateemails/resetpassword.html
@@ -165,8 +165,7 @@
                                                                     <td
                                                                         align="left"
                                                                         style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                                        <div
-                                                                            style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">
+                                                                        <div style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">
                                                                             <h1
                                                                                 style="margin: 0; font-size: 32px; line-height: 40px;">Hi
                                                                                 {{username}}!
@@ -187,8 +186,7 @@
                                                                     <td
                                                                         align="left"
                                                                         style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                                        <div
-                                                                            style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">Click
+                                                                        <div style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">Click
                                                                             on
                                                                             the
                                                                             link
@@ -211,16 +209,8 @@
                                                                             role="presentation"
                                                                             style="border-collapse:separate;line-height:100%;">
                                                                             <tbody><tr>
-                                                                                    <td
-                                                                                        align="center"
-                                                                                        bgcolor="#ea4a40"
-                                                                                        role="presentation"
-                                                                                        style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#ea4a40;"
-                                                                                        valign="middle">
-                                                                                        <a
-                                                                                            href="http://localhost:3000/resetpassword/{{token}}"
-                                                                                            style="display: inline-block; background: #ea4a40; color: #ffffff; font-family: Alata; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 3px;"
-                                                                                            target="_blank">
+                                                                                    <td align="center" bgcolor="#ea4a40"role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#ea4a40;" valign="middle">
+                                                                                        <a href="http://localhost:3000/resetpassword/{{token}}" style="display: inline-block; background: #ea4a40; color: #ffffff; font-family: Alata; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 3px;" target="_blank">
                                                                                             Reset
                                                                                             Password
                                                                                         </a>
@@ -242,9 +232,7 @@
                                                                             Email
                                                                             us
                                                                             at
-                                                                            <a
-                                                                                href="#"
-                                                                                style="color: #ea4a40; text-decoration: none;">
+                                                                            <a href="#" style="color: #ea4a40; text-decoration: none;">
                                                                                 contact@esprit.tn
                                                                             </a></div>
                                                                     </td>
