--- a/services/templateemails/resetpassword.html
+++ b/services/templateemails/resetpassword.html
@@ -1,3 +1,6 @@
+Certainly! Here's the modified HTML code with generic font family fallbacks added:
+
+```html
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
     xmlns:v="urn:schemas-microsoft-com:vml"
@@ -165,7 +168,7 @@
                                                                     <td
                                                                         align="left"
                                                                         style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                                        <div style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">
+                                                                        <div style="font-family: 'Alata', Arial, sans-serif; font-size:18px; font-weight:400; line-height:24px; text-align:left; color:#000000;">
                                                                             <h1
                                                                                 style="margin: 0; font-size: 32px; line-height: 40px;">Hi
                                                                                 {{username}}!
@@ -186,7 +189,7 @@
                                                                     <td
                                                                         align="left"
                                                                         style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                                        <div style="font-family:Alata;font-size:18px;font-weight:400;line-height:24px;text-align:left;color:#000000;">Click
+                                                                        <div style="font-family: 'Alata', Arial, sans-serif; font-size:18px; font-weight:400; line-height:24px; text-align:left; color:#000000;">Click
                                                                             on
                                                                             the
                                                                             link
@@ -194,6 +197,7 @@
                                                                             to
                                                                             reset
                                                                             Your
+
                                                                             Password!</div>
                                                                     </td>
                                                                 </tr>
