--- a/services/templateemails/confirmeMail.html
+++ b/services/templateemails/confirmeMail.html
@@ -223,7 +223,7 @@
                                                                                         style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#ea4a40;"
                                                                                         valign="middle">
                                                                                         <a
-                                                                                            href="http://localhost:3000/confirmeaccount/{{token}}"
+                                                                                            href="https://connectcareer-esprit.vercel.app/confirmeaccount/{{token}}"
                                                                                             style="display: inline-block; background: #ea4a40; color: #ffffff; font-family: Alata; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 3px;"
                                                                                             target="_blank">
                                                                                             Verify
