--- a/services/templateemails/notifymeet.html
+++ b/services/templateemails/notifymeet.html
@@ -179,7 +179,7 @@
                       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;line-height:100%;">
                         <tbody><tr>
                           <td align="center" bgcolor="#2e58ff" role="presentation" style="border:none;border-radius:30px;cursor:auto;mso-padding-alt:10px 25px;background:#2e58ff;" valign="middle">
-                            <a href="http://localhost:3000/room/{{roomID}}" style="display: inline-block; background: #ff2e2e; color: #ffffff; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 30px;" target="_blank">
+                            <a href="https://connectcareer-esprit.vercel.app/room/{{roomID}}" style="display: inline-block; background: #ff2e2e; color: #ffffff; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 30px;" target="_blank">
                             Join the Room  </a>
                           </td>
                         </tr>
