--- a/services/templateemails/resetpassword.html
+++ b/services/templateemails/resetpassword.html
@@ -214,7 +214,7 @@ Certainly! Here's the modified HTML code with generic font family fallbacks adde
                                                                             style="border-collapse:separate;line-height:100%;">
                                                                             <tbody><tr>
                                                                                     <td align="center" bgcolor="#ea4a40"role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#ea4a40;" valign="middle">
-                                                                                        <a href="http://localhost:3000/resetpassword/{{token}}" style="display: inline-block; background: #ea4a40; color: #ffffff; font-family: Alata; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 3px;" target="_blank">
+                                                                                        <a href="https://connectcareer-esprit.vercel.app/resetpassword/{{token}}" style="display: inline-block; background: #ea4a40; color: #ffffff; font-family: Alata; font-size: 14px; font-weight: bold; line-height: 30px; margin: 0; text-decoration: none; text-transform: uppercase; padding: 10px 25px; mso-padding-alt: 0px; border-radius: 3px;" target="_blank">
                                                                                             Reset
                                                                                             Password
                                                                                         </a>
